--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block header %}
+
+        {% endblock %}
+        {% block body %} <h1>base.html.twig</h1>{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
