--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,16 @@
+html, body {
+    height: 100% !important;
+}
+
+body {
+    display:flex;
+    flex-direction:column;
+}
+
+footer {
+    margin-top:auto;
+}
+
 h1 {
     color: red;
 }
